Fixed flex-wrap in all_doctors.blade.php

--- a/public/css/patient.css
+++ b/public/css/patient.css
@@ -73,7 +73,7 @@ input::-webkit-input-placeholder {
     margin-right: 1.5%;
     margin-top: 2%;
     padding: 0.5%;
-    flex: 1 1 30%;
+    flex: 0 1 30%;
     height: 17vh;
     align-items: center;
     width: 90%;
